--- a/cars/Citroen/C3 Puretech.html
+++ b/cars/Citroen/C3 Puretech.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Company D'LUX Rent a Car and Scooter" />
     <meta property="og:description" content="Company D'LUX, Aluguer de carros, Rent a Car and Scooter. Amadora, Lisbon, Portugal, Europe, best prices." />
     <meta property="og:image" content="/assets/images/logo1.gif" />
-    <title>Company D'Lux | GLE 400 AMG</title>
+    <title>Company D'Lux | C3 Puretech</title>
     <link rel="stylesheet" type="text/css" href="../../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../../assets/css/datepicker.css" />
     <link rel="stylesheet" type="text/css" href="../../assets/css/fontawesome/css/all.min.css" />
