--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Airport Lisbon, Airport Portugal, Aluguer Automóvel Amadora, Aluguer Automóvel Lisboa, Aluguer de carros, Aluguer Automóvel, Car Rental, Rent a car, Rent a car lisboa, Company D'LUX, rental cars europe">
+    <meta name="description" content="Company D'LUX, Aluguer de carros, Rent a Car and Scooter. Amadora, Lisbon, Portugal, Europe, best prices." />
     <meta property="og:title" content="Company D'LUX Rent a Car and Scooter" />
     <meta property="og:description" content="Company D'LUX, Aluguer de carros, Rent a Car and Scooter. Amadora, Lisbon, Portugal, Europe, best prices." />
-    <meta property="og:image" content="./assets/images/logo1.gif" />
+    <meta property="og:image" content="/assets/images/logo1.gif" />
     <title>Company D'LUX Rent a Car and Scooter</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="./assets/css/datepicker.css" />
