--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="#vehicles">Veículos</a>
                         <a class="nav-link" href="#services">Serviços</a>
                         <a class="nav-link" href="#rent">Locação</a>
-                        <a class="nav-link" href="#contact">Contato</a>
+                        <a class="nav-link" href="#contact">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -279,10 +279,7 @@
                 <div class="title--bar"></div>
             </div>
             <div class="row">
-                <div class="col d-flex align-items-center justify-content-center">
-                    <a href="http://damlavagem.com/pt/" target="_blank">
-                        <img src="./assets/images/dam.png" />
-                    </a>
+                <div class="col d-flex align-items-center justify-content-center">                    
                     <a href="https://www.facebook.com/profile.php?id=100063858261429" target="_blank">
                         <img src="./assets/images/six-step.png" />
                     </a>
